# rezup

./: .gitignore  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  mkdocs_.py  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: deploy-docs.yml  pypi-cli.yml  pypi.yml  python-package.yml
cli/: README.md  requirements.txt  setup.cfg  setup.py  version.py
command/: index.html
container/: index.html
docs/: Reference.md  command.md  container.md  environ.md  recipe.md  ref_rezup.md  ref_rezup.util.md  rezup.md  rezup.util.md  rezup.util_env.md  scripts.md
docs/stylesheets/: extra.css
environ/: index.html
license/: index.html
rezup/: index.html
rezup.util/: index.html
rezup.util_env/: index.html
scripts/: index.html
search/: search_index.json
src/rezup/: __init__.py  __main__.py  _actions.py  _logging.py  _version.py  cli.py  container.py  exceptions.py  recipe.py  rezup.toml  shell.py  upgrade.py  util.py  util_env.py
src/rezup/_vendor/: version.py
src/rezup/_vendor/toml/: __init__.py  decoder.py  encoder.py  ordered.py
src/rezup/activation/: activator.py
src/rezup/activation/bash/: __init__.py
src/rezup/activation/batch/: __init__.py  up.bat
src/rezup/activation/cshell/: __init__.py  up.csh
src/rezup/activation/fish/: __init__.py
src/rezup/activation/powershell/: __init__.py  up.ps1
src/rezup/activation/xonsh/: __init__.py
src/rezup/launch/: README.md  shell.py  up.bat  up.csh  up.fish  up.ps1  up.sh  up.xsh
stylesheets/: extra.css
tests/: test_container.py  test_upgrade.py  util.py
tests/mock/rez/: setup.cfg
tests/mock/rez/rez/: __init__.py
tests/mock/rez/rez/utils/: _version.py
