[metadata]
name = rezup-api
version = attr: rezup._version.__version__
description = Rez launching environment manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidlatwe/rezup
author = davidlatwe
author_email = davidlatwe@gmail.com
maintainer = davidlatwe
maintainer_email = davidlatwe@gmail.com
license = GPLv3
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
    Topic :: Software Development
    Topic :: System :: Software Distribution
keywords = package resolve version build install software management
project_urls =
    Source=https://github.com/davidlatwe/rezup
    Tracker=https://github.com/davidlatwe/rezup/issues

[options]
zip_safe = true
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
    distlib>=0.3.1,<1
    virtualenv>=20.4.4,<21
    shellingham>=1.4.0,<2
    python-dotenv>=0.17,<1
    pathlib2; python_version < '3.0'
packages = find:
package_dir =
    = src
include_package_data = true

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
rezup = rezup.toml
rezup.launch = up.*

[options.extras_require]
tests =
    pytest

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[flake8]
exclude =
    src/rezup/_vendor
