[metadata]
name = rezup
version = 2.0.0
description = Rez launching environment manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidlatwe/rezup
author = davidlatwe
author_email = davidlatwe@gmail.com
maintainer = davidlatwe
maintainer_email = davidlatwe@gmail.com
license = GPLv3
license_file = LICENSE
platforms = any
project_urls =
    Source=https://github.com/davidlatwe/rezup
    Tracker=https://github.com/davidlatwe/rezup/issues

[options]
zip_safe = true
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
    rezup-api>=2,<3
packages = find:

[options.entry_points]
console_scripts =
    rezup=rezup.cli:run

[sdist]
formats = gztar

[bdist_wheel]
universal = true
