[metadata]
name = rezup
version = 2.1.1
description = Rez launching environment manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidlatwe/rezup
author = davidlatwe
author_email = davidlatwe@gmail.com
maintainer = davidlatwe
maintainer_email = davidlatwe@gmail.com
license = Apache
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
    Topic :: Software Development
    Topic :: System :: Software Distribution
keywords = package resolve version build install software management
project_urls =
    Source=https://github.com/davidlatwe/rezup
    Tracker=https://github.com/davidlatwe/rezup/issues

[options]
zip_safe = true
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
    rezup-api>=2,<3
packages = find:

[options.entry_points]
console_scripts =
    rezup=rezup.cli:run

[sdist]
formats = gztar

[bdist_wheel]
universal = true
